Tokens now expire after 24 hours.  BasicTokenGenerator abstracted out behind TokenGenerator interface.  TokenGenerator object referenced only in TokenManager class.